# tdwm-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.oauth.yml  docker-compose.sse.yml  docker-compose.yml  pyproject.toml
src/tdwm_mcp/: __init__.py  __main__.py  connection_manager.py  fnc_common.py  fnc_prompts.py  fnc_resources.py  fnc_tools.py  fnc_tools_priority1.py  oauth_context.py  prompt.py  resource_queries.py  resource_reference.py  resource_templates.py  retry_utils.py  server.py  tdwm_static.py
src/tdwm_mcp/auth/: __init__.py  config.py  endpoints.py  metadata.py  middleware.py
src/tdwm_mcp/tdsql/: __init__.py  tdsql.py
