[project]
name = "tdwm-mcp"
version = "0.1.0"
description = "Teradata Workload Management MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.12.3",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
    "teradatasql>=20.0.0.30",
    "uvicorn>=0.34.2",
    "starlette>=0.37.0",
    "aiohttp>=3.9.0",
    "pyjwt[crypto]>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "authlib>=1.2.0",
    "httpx>=0.24.0",
]

[[project.authors]]
name = "Artur Borycki"
email = "artur.borycki@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tdwm-mcp = "tdwm_mcp:main"
